# NoWorryCV

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: ats.py  base.py  compliance.py  critic.py  gap_analysis.py  interview_prep.py  jd_analyst.py  jd_review_card.py  jd_review_doc.py  orchestrator.py  resume_parser.py  rewrite.py  strategy.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/graph/: __init__.py  resume_tailor_graph.py
backend/app/schemas/: agent_outputs.py  candidate.py  common.py  jd.py  prep.py  review.py  run_state.py  strategy.py
backend/app/services/: prompt_loader.py  review_cards.py
backend/app/services/llm/: __init__.py  provider.py  structured.py
backend/app/services/parsers/: __init__.py  file_parser.py
backend/app/services/runs/: __init__.py  store.py
backend/app/services/scoring/: __init__.py  heuristics.py
backend/app/static/: app.js  index.html  styles.css
backend/tests/: conftest.py  test_agents.py  test_pipeline.py  test_prompt_loader.py  test_provider.py  test_upload_api.py
docs/: architecture.md  resume_quality_improvement_prompt.md
prompts/v1/: ats.md  compliance.md  critic.md  gap_analysis.md  interview_prep.md  jd_analyst.md  jd_review_card.md  jd_review_doc.md  resume_parser.md  rewrite.md  strategy.md
scripts/: check_public_secrets.py  check_qwen.py
